--- a/Estructural_poo_v15_pruebasDTT220.IPYNB
+++ b/Estructural_poo_v15_pruebasDTT220.IPYNB
@@ -12,7 +12,6 @@
     "# CONFIGURACIÓN GENERAL\n",
     "# -------------------------------\n",
     "TIPO_ESTRUCTURA = \"Suspensión Recta\" # Tipos: \"Suspensión Recta\", \"Suspensión angular\", \"Retención / Ret. Angular\", \"Terminal\"\n",
-    "Zona_climatica = \"D\" # Zonas climáticas AEA: A,B,C,D,E\n",
     "exposicion = \"C\" # Exposiciones B, C, D\n",
     "clase = \"C\"  # Clase de linea según AEA, dependiendo de tensión e importancia (A, B, BB, C, D, E)\n",
     "TITULO = f\"2x220 DTT SAN JORGE PRUEBAS\" # String para nombre de carpeta con datos a guardarse\n",
@@ -21,20 +20,7 @@
     "tipoestructura_nombre_archivo = f\"{TIPO_ESTRUCTURA.replace(' ', '_').replace('ó','o').replace('/','_').lower()}\" \n",
     "folder = f\"{TITULO}/{tipoestructura_nombre_archivo}\"\n",
     "\n",
-    "# Usamos la LibCables para nombres de cables disponibles (ver mas abajo)\n",
-    "cable_conductor_id = \"AlAc 435/55\"  # Lista de cables en archivo DatosCables.py\n",
-    "cable_guardia_id = \"OPGW FiberHome 24FO 58mm2\"\n",
-    "\n",
-    "# Parámetros del viento\n",
-    "Vmax = 38.9 # m/s\n",
-    "Vmed = 0.4 * Vmax\n",
-    "Vtormenta = 20.0\n",
-    "t_hielo = 0.010 # m\n",
-    "Q = 0.0613      # coef. depende de densidad del aire, 0.0613 por defecto\n",
-    "Zco, Zcg, Zca, Zes = 13.0, 13.0, 13.0, 10.0 # alturas efectivas de conductor, guardia, cadena, estructura\n",
-    "Cf_cable, Cf_guardia, Cf_cadena, Cf_estructura = 1.0, 1.0, 0.9, 0.9 # Coeficientes de arrastre de conductor, guardia cadena, estructura, rango 0.9 a 2\n",
-    "\n",
-    "# Parámetros de diseño de línea\n",
+    "# ================= PARÁMETROS DE DISEÑO DE LINEA =================\n",
     "L_vano = 400.0 # m\n",
     "alpha = 0.0  # grados, angulo max de quiebre\n",
     "theta = 45.0 # grados, angulo de viento oblicuo, respecto transversal\n",
@@ -43,6 +29,20 @@
     "PESTRUCTURA = 3900 # daN\n",
     "A_estr_trans = 2 * 15 * (0.4 + 0.4 + 14.8 * 0.015) / 2 #+ 2 * 0.3 # m² # sumo 2 vinculos\n",
     "A_estr_long = A_estr_trans + 3 * 0.5  # m², sumo 3 crucetas \n",
+    "\n",
+    "# Tomamos nombres de archivo DatosCables.py (se leen los campos para ver que cables disponibles hay)\n",
+    "cable_conductor_id = \"AlAc 435/55\"  \n",
+    "cable_guardia_id = \"OPGW FiberHome 24FO 58mm2\"\n",
+    "\n",
+    "# Parámetros del viento y temperatura\n",
+    "Zona_climatica = \"D\" # Zonas climáticas AEA: A,B,C,D,E\n",
+    "Vmax = 38.9 # m/s\n",
+    "Vmed = 0.4 * Vmax # por defecto, pero permite añadir valor numerico\n",
+    "Vtormenta = 20.0\n",
+    "t_hielo = 0.010 # m, espesor manguito de hielo\n",
+    "Q = 0.0613      # coef. depende de densidad del aire, 0.0613 por defecto\n",
+    "Zco, Zcg, Zca, Zes = 13.0, 13.0, 13.0, 10.0 # alturas efectivas de conductor, guardia, cadena, estructura\n",
+    "Cf_cable, Cf_guardia, Cf_cadena, Cf_estructura = 1.0, 1.0, 0.9, 0.9 # Coeficientes de arrastre de conductor, guardia cadena, estructura, rango 0.9 a 2\n",
     "\n",
     "# ================= CONFIGURACIÓN SELECCIÓN DE POSTES =================\n",
     "FORZAR_N_POSTES = 1  # 0=auto, 1=monoposte, 2=biposte, 3=triposte\n",
