Gestion de Cables

--- a/Estructural_poo_v15_pruebasDTT220.IPYNB
+++ b/Estructural_poo_v15_pruebasDTT220.IPYNB
@@ -106,6 +106,7 @@
     "ZOOM_CABEZAL = 0.95\n",
     "REEMPLAZAR_TITULO_GRAFICO = False\n",
     "TITULO_REEMPLAZO = TITULO if REEMPLAZAR_TITULO_GRAFICO else TIPO_ESTRUCTURA\n",
+    "MOSTRAR_C2 = False\n",
     "\n",
     "## Automaticas\n",
     "Vn = TENSION\n",
